# txf-pipeline

./: .dockerignore  .gitignore  README.md  config.toml  docker-compose.yml  docker-compse.yml  pyproject.toml  requirements.txt
.agent/Version/: SKILLS.md
.agent/skills/: CLAUDE.md  SKILL.md
.agent/skills/CodingStyle/: SKILL.md
.agent/skills/InfluxDB-Schema/: SKILL.md
.agent/skills/Redis-Stream/: SKILL.md
.agent/skills/Shioaji/: SKILL.md
.agent/skills/UIStyleDefine/: SKILL.md  sample.md
.agent/skills/Version/: SKILL.md
.agent/skills/example-skill/: SKILL.md
.agent/skills/txf-architecture/: SKILL.md
.agent/skills/txf-pipeline/: SKILL.md
config/grafana/dashboards/: market_dashboard.json
config/grafana/provisioning/dashboards/: dashboard.yaml
config/grafana/provisioning/datasources/: influxdb.yaml
config/influxdb/: influxdb.conf  init-buckets.sh
docker/python/: Dockerfile
frontend/: index.html
md/: Version.md  project.md
nginx/: nginx.conf
python/: celery_app.py  dockerfile  ingest.py  requirements.txt  task.py
redis/: dockerfile
rust/: cargp.toml  dockerfile
rust/src/: main.rs
src/app/: main.py
src/app/api/: shioaji.py
src/app/services/: influx_client.py  redis_client.py
src/app/workers/: ScheduleTask.py  collector.py  shioaji.py
